--- a/DiagramGanta/MainWindow.xaml
+++ b/DiagramGanta/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DiagramGanta"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" MinHeight="650" MinWidth="1200">
     <Grid x:Name="GMainGrid">
         
     </Grid>
